--- a/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/pytest.ini
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/pytest.ini
@@ -1,6 +1,5 @@
 # pytest.ini
 [pytest]
-# this is needed to exclude plugin_test.py, which is not a unit test file
-python_files = test_plugin.py
-# PYTHONPATH="stock-plugins/aiverify.stock.accumulated-local-effect/algorithms"
+testpaths = tests
+
 
