--- a/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.10,<3.12"
 
 [project.optional-dependencies]
 dev = [
-    "test-engine-core @ {root:parent:parent:parent:uri}/test-engine-core",
+    "test-engine-core @ {root:parent:parent:parent:parent:uri}/test-engine-core",
 ]
 
 [project.scripts]
