--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -9,6 +9,7 @@ on:
    branches:
      - 'main'
      - 'v0.*'
+     - 'v2.x'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -32,39 +33,40 @@ jobs:
 
     steps:
 
-    - name: Checkout Code (Pull_Request_Review)
+    - name: Checkout Code (Pull Request Review)
       if: github.event_name == 'pull_request_review'
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           submodules: recursive
 
-    - name: Checkout Code (Workflow_Dispatch)
+    - name: Checkout Code (Workflow Dispatch)
       if: github.event_name == 'workflow_dispatch'
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
-          ref: ${{ inputs.branch_to_test }}
+        ref: ${{ inputs.branch_to_test }}
+        repository: aiverify-foundation/aiverify
+        submodules: recursive
 
-    - name: Set Branch Variable (Pull_Request_Review)
+    - name: Set Branch Variable (Pull Request Into v2.x)
       if: github.event_name == 'pull_request_review'
       run: |
-          echo "BRANCH=branch" >> "$GITHUB_ENV"
+          echo "BRANCH=v2.x" >> "$GITHUB_ENV" 
 
-    - name: Set Branch Variable (Workflow_Dispatch)
+    - name: Set Branch Variable (Workflow Dispatch)
       if: github.event_name == 'workflow_dispatch'
       run: |
-          echo "BRANCH=${{ inputs.branch_to_test }}" >> "$GITHUB_ENV"
+          echo "BRANCH=v1.0" >> "$GITHUB_ENV"
 
     - name: Install & Scan APIGW
       run: |
-          echo $BRANCH
           cd ai-verify-apigw
           npm install
           bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=ai-verify-apigw --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="ai-verify-apigw_$BRANCH" --detect.excluded.directories=/tests --blackduck.trust.cert=true
           cd ../
-
-    - name: Install & Scan AI Verify Portal
+          
+    - name: Install & Scan PORTAL
       run: |
           cd ai-verify-portal
           npm install
@@ -97,6 +99,7 @@ jobs:
           cd ../
 
     - name: Install & Scan TEST ENGINE CORE MODULES
+      if: github.event_name == 'workflow_dispatch'
       run: |
           cd test-engine-core-modules
           python3 -m venv venv
