--- a/aiverify-test-engine/pyproject.toml
+++ b/aiverify-test-engine/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify-test-engine"
-version = "0.10.0"
+version = "2.0.0a1"
 authors = [{ name = "AI Verify" }]
 description = "This core project will support critical functionalities to support plugins and apps."
 dependencies = [
@@ -22,6 +22,7 @@ dependencies = [
     "redis==5.0.1",
     "referencing==0.33.0",
     "rpds-py==0.17.1",
+    "setuptools==75.1.0",
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.12"
