update stock plugin versions

--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/pyproject.toml
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "aiverify_fairness_metrics_toolbox_for_classification"
-version = "0.10.0"
 description = ""
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
@@ -11,6 +10,7 @@ dependencies = [
     "scipy==1.14.1",
 ]
 requires-python = ">=3.10,<3.12"
+dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
@@ -19,6 +19,10 @@ dev = [
 
 [project.scripts]
 aiverify_fairness_metrics_toolbox_for_classification = "aiverify_fairness_metrics_toolbox_for_classification.__main__:main"
+
+[tool.hatch.version]
+path = "aiverify_fairness_metrics_toolbox_for_classification/algo.meta.json"
+pattern = '"version":\s*"(?P<version>[^"]+)"'
 
 [tool.hatch.metadata]
 allow-direct-references = true
