--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "aiverify_blur_corruptions"
-version = "0.10.0"
 description = ""
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
@@ -15,6 +14,7 @@ dependencies = [
     "scikit-image==0.24.0",
 ]
 requires-python = ">=3.10,<3.12"
+dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
@@ -23,6 +23,10 @@ dev = [
 
 [project.scripts]
 aiverify_blur_corruptions = "aiverify_blur_corruptions.__main__:main"
+
+[tool.hatch.version]
+path = "aiverify_blur_corruptions/algo.meta.json"
+pattern = '"version":\s*"(?P<version>[^"]+)"'
 
 [tool.hatch.metadata]
 allow-direct-references = true
