update package descriptions

--- a/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_accumulated_local_effect"
-description = ""
+description = "AI Verify implementation of the Accumulated Local Effect algorithm. The algorithm provides black box explainations of how features and their corresponding values influence the prediction of a model."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = ["numpy==1.26.4", "pandas==2.2.2"]
