--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/algorithms/fairness_metrics_toolbox_for_regression/pyproject.toml
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/algorithms/fairness_metrics_toolbox_for_regression/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_fairness_metrics_toolbox_for_regression"
-description = ""
+description = "AI Verify Fairness Metrics Toolbox (FMT) for Regression contains a list of fairness metrics used to measure how resources (e.g. opportunities, food, loan, medical help) are allocated among the demographic groups (e.g. married male, married female) given a set of sensitive feature(s) (e.g. gender, marital status). This plugin is developed for regression models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = [
