--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_digital_corruptions"
-description = ""
+description = "Part of AI Verify image corruption toolbox. This package includes algorithms that add digital corruptions (brightness up and down, contrast up and down, compression, random tilt, saturate) to images at 5 severity levels, to test the robustness of machine learning models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = [
