--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_general_corruptions"
-description = ""
+description = "Part of AI Verify image corruption toolbox. This package includes algorithms that add general corruptions (gaussian, poisson and salt and pepper noise) to images at 5 severity levels, to test the robustness of machine learning models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = ["numpy==1.26.4", "pandas==2.2.2", "pillow==10.4.0"]
