--- a/stock-plugins/aiverify.stock.partial-dependence-plot/algorithms/partial_dependence_plot/pyproject.toml
+++ b/stock-plugins/aiverify.stock.partial-dependence-plot/algorithms/partial_dependence_plot/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_partial_dependence_plot"
-description = ""
+description = "AI Verify implementation of Partial Dependence Plot (PDP) that explains how each feature and its feature value contribute to the predictions."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = ["numpy==1.26.4", "scipy==1.14.1"]
