--- a/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/pyproject.toml
+++ b/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_robustness_toolbox"
-description = ""
+description = "AI Verify Robustness Toolbox generates a perturbed dataset using boundary attack algorithm on the test dataset."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = [
