--- a/stock-plugins/aiverify.stock.shap-toolbox/algorithms/shap_toolbox/pyproject.toml
+++ b/stock-plugins/aiverify.stock.shap-toolbox/algorithms/shap_toolbox/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify_shap_toolbox"
-description = ""
+description = "AI Verify SHAP Toolbox provides SHAP (SHapley Additive exPlanations) methods to explain the output of machine learning models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = [
