Dockerfile to run algorithm

--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/Dockerfile
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/Dockerfile
@@ -10,15 +10,15 @@ RUN apt-get update && apt-get install -y libhdf5-dev pkg-config
 RUN pip install --upgrade pip
 RUN pip install --no-binary h5py h5py
 
-# Copy test engine core folder to install requirements; in future we can install the test-engine-core pypi package
-# Copy algorithm folder as well as sample data
-# WORKDIR /app
-# RUN git clone --filter=blob:none --sparse https://github.com/aiverify-foundation/aiverify.git --branch=v2.x aiverify
 WORKDIR /app/aiverify
+
+# Copy test engine core folder to install requirements; in future we can install the test-engine-core pypi package
 COPY aiverify-test-engine ./aiverify-test-engine
 
+# Copy sample data to run pytest
 COPY stock-plugins/user_defined_files ./stock-plugins/user_defined_files
 
+# Copy algorithm folder
 COPY stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification ./stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification
 
 # Install algorithm requirements
