--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -62,8 +62,12 @@ jobs:
 
     - name: Install & Scan APIGW
       run: |
+          python3 -m venv venv
+          source venv/bin/activate
           cd aiverify-apigw
-          bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=aiverify-apigw --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-apigw_$BRANCH" --detect.excluded.directories=tests --detect.diagnostic=true --detect.blackduck.signature.scanner.individual.file.matching=ALL --detect.blackduck.signature.scanner.snippet.matching=SNIPPET_MATCHING --blackduck.trust.cert=true
+          pip install poetry
+          poetry install
+          bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=aiverify-apigw --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-apigw_$BRANCH" --detect.excluded.directories=venv --detect.diagnostic=true --detect.blackduck.signature.scanner.individual.file.matching=ALL --detect.blackduck.signature.scanner.snippet.matching=SNIPPET_MATCHING --blackduck.trust.cert=true
           cd ../
           
     # - name: Install & Scan PORTAL
