Upgrade Python Version to 3.11

--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -60,6 +60,11 @@ jobs:
       run: |
           echo "BRANCH=v1.0" >> "$GITHUB_ENV"
 
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+
     - name: Install & Scan APIGW
       run: |
           cd aiverify-apigw
