fix fortmating issues

--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -45,3 +45,7 @@ python = ["3.11"]
 extra-dependencies = [
     "faker>=28.1.0"
 ]
+
+[tool.ruff.lint]
+preview = true
+select = ["E20","E21","E22","E23","E24","E3","F401","F8"]
