Update BlackDuck Scan

--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -88,14 +88,14 @@ jobs:
     #       bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=ai-verify-shared-library --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="ai-verify-shared-library_$BRANCH" --detect.excluded.directories=/tests --blackduck.trust.cert=true
     #       cd ../
 
-    # - name: Install & Scan TEST ENGINE APP
-    #   run: |
-    #       cd test-engine-app
-    #       python3 -m venv venv
-    #       source venv/bin/activate
-    #       pip install -r requirements.txt
-    #       bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=test-engine-app --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="test-engine-app_$BRANCH" --detect.excluded.directories=/tests --blackduck.trust.cert=true
-    #       cd ../
+    - name: Install & Scan TEST ENGINE
+      run: |
+          cd aiverify-test-engine
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install aiverify-test-engine[all]
+          bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=aiverify-test-engine --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-test-engine_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true
+          cd ../
 
     # - name: Install & Scan TEST ENGINE CORE
     #   run: |
