--- a/aiverify-test-engine/pyproject.toml
+++ b/aiverify-test-engine/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "scipy==1.14.1",
     "httpx==0.26.0",
     "openapi-schema-validator==0.6.2",
-    "aiopenapi3 @ git+https://github.com/commonism/aiopenapi3.git@8e9591162d1cef8cfc8e7840f34eb20c84af8c24",
+    "aiopenapi3==0.2.1",
     "aiometer==0.5.0",
     "async-timeout==4.0.3",
     "attrs==23.2.0",
