--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/algorithms/fairness_metrics_toolbox_for_regression/pyproject.toml
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/algorithms/fairness_metrics_toolbox_for_regression/pyproject.toml
@@ -8,14 +8,10 @@ dependencies = [
     "pandas==2.2.2",
     "joblib==1.4.2",
     "scikit-learn==1.5.2",
+    "aiverify-test-engine==2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
-
-[project.optional-dependencies]
-dev = [
-    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
-]
 
 [project.scripts]
 aiverify_fairness_metrics_toolbox_for_regression = "aiverify_fairness_metrics_toolbox_for_regression.__main__:main"
