--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
@@ -12,14 +12,10 @@ dependencies = [
     "scipy==1.14.1",
     "opencv-python==4.10.0.84",
     "scikit-image==0.24.0",
+    "aiverify-test-engine==2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
-
-[project.optional-dependencies]
-dev = [
-    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
-]
 
 [project.scripts]
 aiverify_blur_corruptions = "aiverify_blur_corruptions.__main__:main"
