--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
@@ -13,14 +13,10 @@ dependencies = [
     "opencv-python==4.10.0.84",
     "scikit-image==0.24.0",
     "wand==0.6.13",
+    "aiverify-test-engine==2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
-
-[project.optional-dependencies]
-dev = [
-    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
-]
 
 [project.scripts]
 aiverify_environment_corruptions = "aiverify_environment_corruptions.__main__:main"
