--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
@@ -3,14 +3,14 @@ name = "aiverify-general-corruptions"
 description = "Part of AI Verify image corruption toolbox. This package includes algorithms that add general corruptions (gaussian, poisson and salt and pepper noise) to images at 5 severity levels, to test the robustness of machine learning models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
-dependencies = ["numpy==1.26.4", "pandas==2.2.2", "pillow==10.4.0"]
+dependencies = [
+    "numpy==1.26.4",
+    "pandas==2.2.2",
+    "pillow==10.4.0",
+    "aiverify-test-engine==2.0.0a1",
+]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
-
-[project.optional-dependencies]
-dev = [
-    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
-]
 
 [project.scripts]
 aiverify_general_corruptions = "aiverify_general_corruptions.__main__:main"
