--- a/stock-plugins/aiverify.stock.shap-toolbox/algorithms/shap_toolbox/pyproject.toml
+++ b/stock-plugins/aiverify.stock.shap-toolbox/algorithms/shap_toolbox/pyproject.toml
@@ -11,14 +11,10 @@ dependencies = [
     "xgboost==2.1.1",
     "scipy==1.14.1",
     "shap==0.46.0",
+    "aiverify-test-engine==2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
-
-[project.optional-dependencies]
-dev = [
-    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
-]
 
 [project.scripts]
 aiverify_shap_toolbox = "aiverify_shap_toolbox.__main__:main"
