Add Pip Freeze and Pip Install via requirements.txt

--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -100,9 +100,17 @@ jobs:
     - name: Install & Scan TEST ENGINE
       run: |
           cd aiverify-test-engine
+
           python3 -m venv venv
           source venv/bin/activate
           pip install -e .
+          pip freeze > requirements.txt
+          deactivate
+          rm -rf venv
+
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
           bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=aiverify-test-engine --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-test-engine_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true
           deactivate
           cd ../
