--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -139,7 +139,7 @@ jobs:
           cd stock-plugins
           python3 -m venv venv
           source venv/bin/activate
-          find / -type d -name "aiverify.*/algorithms" -exec pip install -e . "{}" \;
+          find ./ -type d -name "aiverify.*/algorithms" -exec pip install -e . "{}" \;
           bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=stock-plugins --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="stock-plugins_$BRANCH" --detect.excluded.directories=venv --blackduck.trust.cert=true
           deactivate
           cd ../
